Troubleshooting failing tests in azure pipeline